--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ##Spring DataSource config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.2.47:3306/db_example?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/db_example?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=springuser
 spring.datasource.password=password
 
