--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+server.port=5000
+
+##dev tool for static reloading
+project.base-dir=[]
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
+spring.web.resources.static-locations=${project.base-dir}/src/main/resources/static/
+
+
 ##Spring DataSource config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_example?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=springuser
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
 spring.datasource.password=password
 
 ## JPA Hibernate prop
